--- a/package.json
+++ b/package.json
@@ -3,12 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.13.12",
+    "@emotion/css": "^11.1.3",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap-social": "^5.1.1",
+    "emotion": "^11.0.0",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.2",
+    "react-anime": "^4.0.4",
+    "react-awesome-button": "^6.5.1",
+    "react-bootstrap": "^1.5.2",
+    "react-custom-share": "^0.4.8",
     "react-dom": "^17.0.2",
+    "react-dribble-button": "^0.2.2",
+    "react-icons": "^4.2.0",
+    "react-redux": "^7.2.3",
+    "react-redux-form": "^1.16.14",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
+    "react-spring": "^9.1.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
