--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap-social": "^5.1.1",
     "emotion": "^11.0.0",
+    "firebase": "^8.4.1",
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-anime": "^4.0.4",
-    "react-awesome-button": "^6.5.1",
-    "react-bootstrap": "^1.5.2",
     "react-custom-share": "^0.4.8",
     "react-dom": "^17.0.2",
-    "react-dribble-button": "^0.2.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.3",
     "react-redux-form": "^1.16.14",
@@ -25,6 +23,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-spring": "^9.1.1",
+    "react-vertical-timeline-component": "^3.3.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
