--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap-social": "^5.1.1",
+    "emailjs-com": "^2.6.4",
     "emotion": "^11.0.0",
     "firebase": "^8.4.1",
     "font-awesome": "^4.7.0",
     "photoswipe": "^4.1.3",
     "react": "^17.0.2",
     "react-anime": "^4.0.4",
+    "react-bootstrap": "^1.5.2",
     "react-custom-share": "^0.4.8",
     "react-dom": "^17.0.2",
     "react-full-screen": "^1.0.2",
     "react-icons": "^4.2.0",
     "react-images": "^1.0.0",
+    "react-particle-effect-button": "^1.0.1",
     "react-photo-gallery": "^8.0.0",
     "react-redux": "^7.2.3",
     "react-redux-form": "^1.16.14",
