--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "niro",
+  "homepage": "https://nikkoroque.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@babel/plugin-transform-react-jsx": "^7.13.12",
     "@emotion/css": "^11.1.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
