--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-redux": "^7.2.3",
     "react-redux-form": "^1.16.14",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.2",
     "react-spring": "^9.1.1",
     "react-vertical-timeline-component": "^3.3.3",
